Bug 424682 - Payee City+State info lost after save
Summary: Payee City+State info lost after save
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-26 11:48 UTC by Mark Medoff
Modified: 2024-08-17 20:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments
attachment-6835-0.html (1.27 KB, text/html)
2020-07-26 12:10 UTC, Mark Medoff
Details
attachment-25739-0.html (1.33 KB, text/html)
2020-07-26 20:25 UTC, Mark Medoff
Details
attachment-18929-0.html (1.74 KB, text/html)
2020-07-27 10:45 UTC, Mark Medoff
Details
attachment-2919-0.html (1.39 KB, text/html)
2020-07-28 10:37 UTC, Mark Medoff
Details
attachment-8012-0.html (1.25 KB, text/html)
2020-08-12 10:23 UTC, Mark Medoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Medoff 2020-07-26 11:48:32 UTC
SUMMARY
Data entered into CITY and STATE fields are not retained after closing program

STEPS TO REPRODUCE
1. Enter data in CITY and STATE field on PAYEE Address tab
2. Hit UPDATE button
3. Save file

OBSERVED RESULT
Close program and reopen file. Fields are blank and data is lost

EXPECTED RESULT
Data should be saved

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2020-07-26 11:58:50 UTC
I am unable to duplicate this current 5.1 HEAD code. Which file format are you using?
Comment 2 Mark Medoff 2020-07-26 12:10:38 UTC
Created attachment 130407 [details]
attachment-6835-0.html

my file has the .kmy file type.

On Sun, Jul 26, 2020 at 7:58 AM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424682
>
> Thomas Baumgart <tbaumgart@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|REPORTED                    |NEEDSINFO
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #1 from Thomas Baumgart <tbaumgart@kde.org> ---
> I am unable to duplicate this current 5.1 HEAD code. Which file format are
> you
> using?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Thomas Baumgart 2020-07-26 16:34:47 UTC
OK, so it is of the XML backend which I have also used. The other option would have been the database backend.

Can you check if the problem persists with the latest AppImage version from https://binary-factory.kde.org/job/KMyMoney_Stable_Appimage_Build/ and report back?
Comment 4 Mark Medoff 2020-07-26 20:25:31 UTC
Created attachment 130416 [details]
attachment-25739-0.html

Ok. Will try it tomorrow when I am at my computer again.

Thanks for always being so responsive to the issues.

Mark

On Sun, Jul 26, 2020, 12:34 PM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424682
>
> --- Comment #3 from Thomas Baumgart <tbaumgart@kde.org> ---
> OK, so it is of the XML backend which I have also used. The other option
> would
> have been the database backend.
>
> Can you check if the problem persists with the latest AppImage version from
> https://binary-factory.kde.org/job/KMyMoney_Stable_Appimage_Build/ and
> report
> back?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 5 Mark Medoff 2020-07-27 10:45:15 UTC
Created attachment 130432 [details]
attachment-18929-0.html

I downloaded Build#720 and tried again.
I got even stranger behaviour with that build.

I put a CITY and STATE entry for one payee and the update button became
grayed out after I input the data.
I experimented more and found I could input CITY data and click on update
but when I input STATE data, the button grayed out.
I tried the above with other payees and most of the time got the same
results but once I was able to input STATE and then select UPDATE.

I saved the file and reopened it. None of the CITY data I input was saved.

Mark

On Sun, Jul 26, 2020 at 12:34 PM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424682
>
> --- Comment #3 from Thomas Baumgart <tbaumgart@kde.org> ---
> OK, so it is of the XML backend which I have also used. The other option
> would
> have been the database backend.
>
> Can you check if the problem persists with the latest AppImage version from
> https://binary-factory.kde.org/job/KMyMoney_Stable_Appimage_Build/ and
> report
> back?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 6 Thomas Baumgart 2020-07-27 16:10:15 UTC
Build #720 is for master, not 5.1. I just tried the latest AppImage for stable https://binary-factory.kde.org/job/KMyMoney_Stable_Appimage_Build/lastSuccessfulBuild/artifact/KMyMoney-5.1.0-3a769f6-x86_64.AppImage which does not show this problem at all.

Are you using master? Don't at the moment. It's not stable.
Comment 7 Mark Medoff 2020-07-28 10:37:04 UTC
Created attachment 130455 [details]
attachment-2919-0.html

CITY and STATE data are properly saved in the build you sent the link to.
Going forward, I will avoid using the master as you suggested.

Mark

On Mon, Jul 27, 2020 at 12:10 PM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424682
>
> --- Comment #6 from Thomas Baumgart <tbaumgart@kde.org> ---
> Build #720 is for master, not 5.1. I just tried the latest AppImage for
> stable
>
> https://binary-factory.kde.org/job/KMyMoney_Stable_Appimage_Build/lastSuccessfulBuild/artifact/KMyMoney-5.1.0-3a769f6-x86_64.AppImage
> which does not show this problem at all.
>
> Are you using master? Don't at the moment. It's not stable.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 8 Bug Janitor Service 2020-08-12 04:33:15 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 9 Thomas Baumgart 2020-08-12 05:21:14 UTC
Setting state back to reported
Comment 10 Mark Medoff 2020-08-12 10:23:46 UTC
Created attachment 130817 [details]
attachment-8012-0.html

It is working correctly in latest stable appimage

Mark

On Wed, Aug 12, 2020 at 1:21 AM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424682
>
> Thomas Baumgart <tbaumgart@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>          Resolution|WAITINGFORINFO              |---
>              Status|NEEDSINFO                   |REPORTED
>
> --- Comment #9 from Thomas Baumgart <tbaumgart@kde.org> ---
> Setting state back to reported
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 11 Jack 2020-08-12 15:39:46 UTC
Closing per Comment #10.

Minor hint - when replying to a bug by email, please try to send plain text only.  If you send HTML it gets turned into an attachment to the bug.
Comment 12 Thomas Baumgart 2020-08-12 18:15:24 UTC
Because it is still broken in master
Comment 13 Thomas Baumgart 2020-08-14 09:48:41 UTC
Git commit de811311745a6615bdad2d00c37238d88bac130f by Thomas Baumgart.
Committed on 14/08/2020 at 09:48.
Pushed by tbaumgart into branch 'master'.

Fix payee data display

M  +4    -7    kmymoney/views/kpayeesview.cpp

https://invent.kde.org/office/kmymoney/commit/de811311745a6615bdad2d00c37238d88bac130f