Fix payee data display

BUG: 424682